routing configuration updated

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "router-project",
   "version": "0.1.0",
   "private": true,
-  "homepage" : "https://abhishek-2k23.github.io/Study-Notion-FrontEnd",
+  "homepage" : ".",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
